Add removeLayer method to Viewer - Add documentation

--- a/jsdoc/template/openlime/tmpl/layout.tmpl
+++ b/jsdoc/template/openlime/tmpl/layout.tmpl
@@ -13,6 +13,8 @@
 
 	<link type="text/css" rel="stylesheet" href="styles/site.<?js= this.navOptions.theme ?>.css">
 
+	<link type="text/css" rel="stylesheet" href="styles/openlime.css">
+
 </head>
 
 <body>
